# resourcemanager

./: CMakeLists.txt  README.md  resourcebase.h  resourceloader.h  resourcemanager.cpp  resourcemanager.h
loaders/: rawfileloader.h  sjsonloader.h  stbimageloaders.h  textfileloader.h
processors/: gaussimageprocessor.h  premultiplyalphaimageprocessor.h  resizeimageprocessor.h
resourcetypes/: imageresource.h  rawfileresource.h  sjsonresource.h  textfileresource.h
