
PROJECT(resourcemanager)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

FILE(GLOB RESOURCEMANAGER_HEADERS "*.h")
FILE(GLOB RESOURCEMANAGER_SOURCES "*.cpp")
FILE(GLOB RESOURCEMANAGER_LOADERS_HEADERS "loaders/*.h")
FILE(GLOB RESOURCEMANAGER_LOADERS_SOURCES "loaders/*.cpp")
FILE(GLOB RESOURCEMANAGER_PROCESSORS_HEADERS "processors/*.h")
FILE(GLOB RESOURCEMANAGER_PROCESSORS_SOURCES "processors/*.cpp")
FILE(GLOB RESOURCEMANAGER_RESOURCETYPES_HEADERS "resourcetypes/*.h")
FILE(GLOB RESOURCEMANAGER_RESOURCETYPES_SOURCES "resourcetypes/*.cpp")

SET(RESOURCEMANAGER_HEADERS
   ${RESOURCEMANAGER_HEADERS}
   ${RESOURCEMANAGER_LOADERS_HEADERS}
   ${RESOURCEMANAGER_PROCESSORS_HEADERS}
   ${RESOURCEMANAGER_RESOURCETYPES_HEADERS}
)
SET(RESOURCEMANAGER_SOURCES
   ${RESOURCEMANAGER_SOURCES}
   ${RESOURCEMANAGER_LOADERS_SOURCES}
   ${RESOURCEMANAGER_PROCESSORS_SOURCES}
   ${RESOURCEMANAGER_RESOURCETYPES_SOURCES}
)

ADD_LIBRARY(resourcemanager ${RESOURCEMANAGER_HEADERS} ${RESOURCEMANAGER_SOURCES})
